<resources>
    <string name="app_name">Music App</string>
    <string name="text1">Playlist >>></string>
    <string name="text2">Songs >>></string>
    <string name="text3">Artists >>></string>
    <string name="text4">Player >>></string>
    <string name="text5">ARTISTS COLLECTION</string>
    <string name="text6">Eminem</string>
    <string name="text7">Arijit Singh</string>
    <string name="text8">Armaan Malik</string>
    <string name="text9">Atif Aslam</string>
    <string name="text10">Workout Beats</string>
    <string name="text11">Rap God</string>
    <string name="text12">Kuch Is Tarah</string>
    <string name="text13">Love Dose</string>
    <string name="text14">ALL PLAYLISTS</string>
    <string name="text15">Party Songs</string>
    <string name="text16">Old Songs</string>
    <string name="text17">Workout Playlist</string>
    <string name="text18">DJ Songs</string>
    <string name="text19">ALL SONGS</string>
    <string name="text20">credit/debit card</string>
    <string name="text21">net banking</string>
    <string name="text22">paypal</string>
    <string name="text23">paytm</string>
    <string name="text24">Payment >>></string>
    <string name="text25">MEDIA PLAYER HOME</string>
    <string name="text26">PAYMENT VIEW</string>
    <string name="text27">pay via -</string>
    <string name="text28">This activity displays you all the information about the artists.</string>
    <string name="text29">This activity displays you all the songs that are currently present on your device.</string>
    <string name="text30">This activity is the now playing activity of the music player.</string>
    <string name="text31">This activity displays you all the playists you have made of your songs collection.</string>
    <string name="text32">This activity displays you all the available payment modes for your purchase.</string>
    <string name="text33">This activity displays you the home of your music player.</string>
    <string name="text34">Go to now playing activity</string>
    <string name="text35">Go to home activity</string>
    <string name="text36">Go to payment activity</string>
    <string name="text37">Go to playlist activity</string>
    <string name="text38">Playing Song</string>
    <string name="text39">Go to songs activity</string>
    <string name="text40">Go to artists activity</string>
</resources>