<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalstructureapp.MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/musicbg" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/text25"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:fontFamily="sans-serif-condensed"
            android:textAlignment="center"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text33"
            android:background="@android:color/white"
            android:textSize="25sp"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/playlist"
            android:text="@string/text1"
            style="@style/text_style"
            />
        <TextView
            android:id="@+id/song"
            android:text="@string/text2"
            style="@style/text_style"
            />
        <TextView
            android:id="@+id/artist"
            android:text="@string/text3"
            style="@style/text_style"
            />
        <TextView
            android:id="@+id/playing"
            android:text="@string/text4"
            style="@style/text_style"
            />
        <TextView
            android:id="@+id/payment"
            android:text="@string/text24"
            style="@style/text_style"
            />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
