<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalstructureapp.payment">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:src="@drawable/musicbg"
    android:scaleType="centerCrop"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/pay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text26"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="40dp"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text32"
            android:background="@android:color/white"
            android:textSize="25sp"
            android:padding="10dp"/>
        <Button
            android:id="@+id/b4"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text35"
            style="@style/button"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text27"
            android:textStyle="italic"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/payment"
            android:text="@string/text20"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/payment"
            android:text="@string/text21"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/payment"
            android:text="@string/text22"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/payment"
            android:text="@string/text23"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
