 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.musicalstructureapp.songs">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/musicbg"
            android:scaleType="centerCrop"
            />
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text19"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="35sp"
                android:padding="10dp"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text29"
                android:background="@android:color/white"
                android:textSize="25sp"
                android:padding="10dp"/>
            <Button
                android:id="@+id/b6"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text37"
                style="@style/button"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text10"
                style="@style/song"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text11"
                style="@style/song"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text12"
                style="@style/song"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text13"
                style="@style/song"/>
        </LinearLayout>
     </ScrollView>
 </RelativeLayout>
