 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.musicalstructureapp.artists">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/musicbg"
         android:scaleType="centerCrop"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
             <TextView
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text5"
                android:textSize="32sp"
                android:textColor="#f44242"
                android:textAlignment="center"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text28"
                android:background="@android:color/white"
                android:textSize="25sp"
                android:padding="10dp"/>
             <Button
                 android:id="@+id/b1"
                 android:padding="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/text34"
                 style="@style/button"/>
             <TextView
                 android:id="@+id/t2"
                 android:padding="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/artist"
                 android:text="@string/text6"/>
             <TextView
                 android:id="@+id/t3"
                 android:padding="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/artist"
                 android:text="@string/text7"/>
             <TextView
                 android:id="@+id/t4"
                 android:padding="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/artist"
                 android:text="@string/text8"/>
             <TextView
                 android:id="@+id/t5"
                 android:padding="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/text9"
                 style="@style/artist"/>
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
