<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalstructureapp.now_Playing">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/musicbg"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/nowplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text38"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="40dp"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text30"
            android:background="@android:color/white"
            android:textSize="25sp"
            android:padding="10dp"/>
        <Button
            android:id="@+id/b3"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text39"
            style="@style/button"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/aashiqui2"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_above="@id/pause"
            android:max="100"
            android:progress="30" />
        <ImageView
            android:id="@+id/pause"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/pause"
            android:layout_alignParentBottom="true"/>
    </LinearLayout>
</RelativeLayout>
